kubernetes/metrics/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: prometheus
  labels:
    app: prometheus

spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v3.3.1
          ports:
            - name: web
              containerPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: grafana
  labels:
    app: grafana

spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:13.2.3
          ports:
            - name: web
              containerPort: 3000
