kubernetes/metrics/01-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: prometheus

spec:
  ports:
    - protocol: TCP
      name: web
      port: 9090
  selector:
    app: prometheus
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: grafana

spec:
  ports:
    - protocol: TCP
      name: web
      port: 3000
  selector:
    app: grafana
