kubernetes/metrics/03-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: default
  name: ingressroute-metrics

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`metrics.calfur.dev`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
  tls:
    certResolver: myresolver
